--- a/15-computer-vision/Python/image-analysis/.env
+++ b/15-computer-vision/Python/image-analysis/.env
@@ -1,2 +1,2 @@
-COG_SERVICE_ENDPOINT=your_cognitive_services_endpoint
-COG_SERVICE_KEY=your_cognitive_services_key
+COG_SERVICE_ENDPOINT='https://cognitiveservices09.cognitiveservices.azure.com/'
+COG_SERVICE_KEY='5990e0661ae24e82b4b380be73af639f'
