--- a/20-ocr/Python/read-text/.env
+++ b/20-ocr/Python/read-text/.env
@@ -1,2 +1,2 @@
-COG_SERVICE_ENDPOINT=your_cognitive_services_endpoint
-COG_SERVICE_KEY=your_cognitive_services_key
+COG_SERVICE_ENDPOINT='https://adm2cognitiveservices.cognitiveservices.azure.com/'
+COG_SERVICE_KEY='a85de2c76d2d492ea53b7f595c87b939'
